{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 363,
  "lineage": "c5b4c412-5a4c-d06f-3c95-0d68a2886b9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bb00e866f72f3d9",
            "arn": "arn:aws:ec2:us-east-1:750761633674:elastic-ip/eipalloc-02bb00e866f72f3d9",
            "domain": "vpc",
            "id": "eipalloc-02bb00e866f72f3d9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-89-56-185.compute-1.amazonaws.com",
            "public_ip": "98.89.56.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5190b458220ecbe",
            "arn": "arn:aws:ec2:us-east-1:750761633674:elastic-ip/eipalloc-0a5190b458220ecbe",
            "domain": "vpc",
            "id": "eipalloc-0a5190b458220ecbe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-92-16-28.compute-1.amazonaws.com",
            "public_ip": "3.92.16.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:internet-gateway/igw-0ff278047d791d7f3",
            "id": "igw-0ff278047d791d7f3",
            "owner_id": "750761633674",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-igw",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-igw",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750761633674:loadbalancer/app/sample-game-app-dev-alb/9cbdc102b6f3d764",
            "arn_suffix": "app/sample-game-app-dev-alb/9cbdc102b6f3d764",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-game-app-dev-alb-413619480.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:750761633674:loadbalancer/app/sample-game-app-dev-alb/9cbdc102b6f3d764",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-game-app-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d4b4ca8301e04de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01942b1536d2b766b"
              },
              {
                "subnet_id": "subnet-0bed3f2889b528106"
              }
            ],
            "subnets": [
              "subnet-01942b1536d2b766b",
              "subnet-0bed3f2889b528106"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc_id": "vpc-06cbe316f1256fe10",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750761633674:listener/app/sample-game-app-dev-alb/9cbdc102b6f3d764/a7b8d29fd36cd604",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:750761633674:targetgroup/sample-game-app-dev-tg/514acac7b0505f48",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750761633674:listener/app/sample-game-app-dev-alb/9cbdc102b6f3d764/a7b8d29fd36cd604",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:750761633674:loadbalancer/app/sample-game-app-dev-alb/9cbdc102b6f3d764",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "Sample Game Backend"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750761633674:targetgroup/sample-game-app-dev-tg/514acac7b0505f48",
            "arn_suffix": "targetgroup/sample-game-app-dev-tg/514acac7b0505f48",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/application/version",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750761633674:targetgroup/sample-game-app-dev-tg/514acac7b0505f48",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-game-app-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bb00e866f72f3d9",
            "association_id": "eipassoc-0f9de6f05c222846f",
            "connectivity_type": "public",
            "id": "nat-01b0f01fd5b41593d",
            "network_interface_id": "eni-06b2d819a2c204e1c",
            "private_ip": "10.0.1.122",
            "public_ip": "98.89.56.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bed3f2889b528106",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5190b458220ecbe",
            "association_id": "eipassoc-0a81208fc5f740e3d",
            "connectivity_type": "public",
            "id": "nat-0255cd720ae0046a2",
            "network_interface_id": "eni-06cdf8c5473d8dfbb",
            "private_ip": "10.0.2.232",
            "public_ip": "3.92.16.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01942b1536d2b766b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:route-table/rtb-0d7b3e77c3c9ae98c",
            "id": "rtb-0d7b3e77c3c9ae98c",
            "owner_id": "750761633674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b0f01fd5b41593d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:route-table/rtb-0a601234cddd50153",
            "id": "rtb-0a601234cddd50153",
            "owner_id": "750761633674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0255cd720ae0046a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:route-table/rtb-08d83317e9eade269",
            "id": "rtb-08d83317e9eade269",
            "owner_id": "750761633674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff278047d791d7f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-rt",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-rt",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86add43e0a5fe05",
            "route_table_id": "rtb-0d7b3e77c3c9ae98c",
            "subnet_id": "subnet-080b04f8e87a98500"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9eccb4234eb6c01",
            "route_table_id": "rtb-0a601234cddd50153",
            "subnet_id": "subnet-0b191d7d7e2db639d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca469409ea11a938",
            "route_table_id": "rtb-08d83317e9eade269",
            "subnet_id": "subnet-0bed3f2889b528106"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb0ccb2fdaf7394",
            "route_table_id": "rtb-08d83317e9eade269",
            "subnet_id": "subnet-01942b1536d2b766b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:security-group/sg-00d4b4ca8301e04de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d4b4ca8301e04de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-game-app-dev-alb-20251026121337307700000002",
            "name_prefix": "sample-game-app-dev-alb-",
            "owner_id": "750761633674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-alb-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-alb-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:security-group/sg-037933a6a583fa787",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037933a6a583fa787",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d4b4ca8301e04de"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sample-game-app-dev-ecs-tasks-20251026121344586100000004",
            "name_prefix": "sample-game-app-dev-ecs-tasks-",
            "owner_id": "750761633674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-ecs-tasks-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-ecs-tasks-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:security-group/sg-089684187b2bdd63c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089684187b2bdd63c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037933a6a583fa787"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sample-game-app-dev-rds-20251026121350000600000005",
            "name_prefix": "sample-game-app-dev-rds-",
            "owner_id": "750761633674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-rds-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-rds-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:subnet/subnet-080b04f8e87a98500",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b04f8e87a98500",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750761633674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:subnet/subnet-0b191d7d7e2db639d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b191d7d7e2db639d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750761633674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:subnet/subnet-0bed3f2889b528106",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed3f2889b528106",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750761633674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:subnet/subnet-01942b1536d2b766b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01942b1536d2b766b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750761633674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-06cbe316f1256fe10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750761633674:vpc/vpc-06cbe316f1256fe10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008d6fdf463e91fdf",
            "default_route_table_id": "rtb-00aa94f34c2469626",
            "default_security_group_id": "sg-07aa1c85dcac212c7",
            "dhcp_options_id": "dopt-0aa9a1e907e75c8ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cbe316f1256fe10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00aa94f34c2469626",
            "owner_id": "750761633674",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-vpc",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-vpc",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}